finished the contact page

--- a/projects.html
+++ b/projects.html
@@ -16,5 +16,12 @@
 		<a href="blog.html"> blog </a> <span> </span>
 		<a href="contact.html"> contact </a> <span> </span>
 	</nav>
-
+    <body>
+		<div class="content">
+			<br><br>
+			<h1> &#10025; projects &#10025; </h1>
+			<br>
+			
+		</div>
+	</body>
     </html>
