resume page finished + project layout

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 border-radius: 6px;
                 margin: 10px;
                 padding: 10px;
-                font: bold 14pt"Quintessential", Arial, Helvetica, sans-serif;
+                font: bold 14pt "Quintessential", Arial, Helvetica, sans-serif;
                 color: rgb(117, 15, 75);
             }
             img {
@@ -45,7 +45,7 @@
             <h1> &#10025; contact me &#10025; </h1>
             <br>
             <div class="social">
-                <p style="padding-top: 10px;font-size: 17px;"> Click on the icons to connect via other platforms or send me an email</p>
+                <p style="padding-top:10px;"> Connect with me via these platforms or send me an email</p>
             <a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"></a>
             
@@ -67,8 +67,7 @@
                 <label for="message"> Message:</label> <br>
                 <textarea name="message" style="height: 200px;" placeholder="Type your message here"></textarea>
                 <br>
-                <input type="submit" value="Submit Message"
-                    style="display: block; margin: 20px auto;width:25%;padding:1px;border:none;font:bold 14pt 'Cinzel Decorative';color:rgb(255, 255, 255);background-color:rgb(190, 97, 152);cursor:pointer;">
+                <input type="submit" value="Submit Message" class="button">
             </form>
             <p style="text-align: center;"> <br> Thanks for reaching out! Expect a response within 3 days.</p>
 
