--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
 			rel="stylesheet">
 		<style>
-			p {
-				font-size: 18pt;
+			#selfie {
+				margin-top: 10px;
+				margin-right: 20px;
+				float: left;
 			}
 		</style>
 		<title> Home - Licia's Portfolio </title>
@@ -27,12 +29,12 @@
 			<br><br>
 			<h1> &#10025; welcome to my portfolio &#10025; </h1>
 			<br>
-			<img id="selfie" src="photo1.jpg" alt="My selfie" width=300px />
-			<p> <br> Hello, there! I'm Licia and am pleased to invite you into a bit of my life. <br><br>
+			<img class="border" id="selfie" src="photo1.jpg" alt="My selfie" width=300px />
+			<p style="font:18pt Times;"> <br> Hello, there! I'm Licia and am pleased to invite you into a bit of my life. <br><br>
 				Over the years, I have learned various computer technical skills as a student to prepare for my future
 				career. <br><br>
 				Please, explore my page to learn more about my specializations and personal life! <br><br> <br><br>
-				Also, check out my gallery down below :) I've included some pictures of my everyday life. </p>
+				Also, check out my gallery down below! I've included some pictures of my everyday life. </p>
 		</div>
 	</body>
 
