--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,27 @@
 		<link rel="stylesheet" href="portfoliostyle.css">
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
 			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
+		<style>
+			.container {
+				display: grid;
+				grid-template-columns: auto;
+				row-gap: 100px;
+				padding: 0px 90px;
+			}
+
+			.container>div {
+				background-color: rgba(255, 255, 255, 0.562);
+				
+				border-radius: 8px;
+				padding: 10px;
+				font: bold 20px 'Quintessential';
+				letter-spacing: 4px;
+				text-align: center;
+				height:400px;
+				
+			}
+		</style>
 		<title> Porjects - Licia's Portfolio </title>
 	</head>
 	<nav>
@@ -16,12 +37,17 @@
 		<a href="blog.html"> blog </a> <span> </span>
 		<a href="contact.html"> contact </a> <span> </span>
 	</nav>
-    <body>
+
+	<body>
 		<div class="content">
 			<br><br>
 			<h1> &#10025; projects &#10025; </h1>
 			<br>
-			
+			<div class="container">
+				<div class="border"> Step-by-Step Repair Guide </div>
+				<div class="border"> 2D Platformer Java Game </div>
+			</div>
 		</div>
 	</body>
-    </html>
+
+	</html>
