--- a/resume.html
+++ b/resume.html
@@ -22,9 +22,11 @@
 			<br><br>
 			<h1> &#10025; my resume &#10025; </h1>
 			<br>
+			<p> Here is a comprehensive list of my skills and experience <br><br></p>
+			<img src="general resume.jpg" class ="border" style="width:100%;"/>
+			<br>
 			
-
-		</div>
+			<a href="general resume.jpg" download="licia_resume" class="button" style="line-height: 40px;width:22%;"> Download File </a>
 		</div>
 	</body>
 
