added content to projects page

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 <label for="message"> Message:</label> <br>
                 <textarea name="message" style="height: 200px;" placeholder="Type your message here"></textarea>
                 <br>
-                <input type="submit" value="Submit Message" class="button">
+                <input type="submit" value="Submit Message" class="button" style="cursor:pointer;height:40px;width:200px;padding: 0px 10px;">
             </form>
             <p style="text-align: center;"> <br> Thanks for reaching out! Expect a response within 3 days.</p>
 
