--- a/resume.html
+++ b/resume.html
@@ -18,15 +18,15 @@
 	</nav>
 
 	<body>
-		<div class="content">
+		<div class="content" style="text-align: center;">
 			<br><br>
 			<h1> &#10025; my resume &#10025; </h1>
 			<br>
 			<p> Here is a comprehensive list of my skills and experience <br><br></p>
-			<img src="general resume.jpg" class ="border" style="width:100%;"/>
+			<img src="general resume.jpg" class ="border" style="width:90%;"/>
 			<br>
 			
-			<a href="general resume.jpg" download="licia_resume" class="button" style="line-height: 40px;width:22%;"> Download File </a>
+			<a href="general resume.jpg" download="licia_resume" class="button"> Download File </a>
 		</div>
 	</body>
 
