added more projects

--- a/about.html
+++ b/about.html
@@ -33,14 +33,19 @@
 			<h2> Biography </h2>
 			<p style="text-align:center;font-style:italic;"> I was born in Brazil in 2003 and later moved to Canada with
 				my family at the age of 13. Since I was a little kid, I have always loved to play video games. It
-				started with those simple browser games, then i go into online multiplayer games. Because I spend msot
-				of my time on the computer, I became more interested in computers and therefore decided to pursue
-				information technology. <br><br></p>
+				started with those simple browser games, then I got into online multiplayer games. Because I spend most
+				of my time on the computer, I became more interested in computers, and thus decided to pursue
+				information technology. I highly value my education and try my best to achieve high grades across all
+				of my classes. However, I'm also the type to make time for my hobbies as well and not let school
+				responsibilities completely consume my time. <br> I've developed a variety of computer technical skills in
+				both high school and university, so I would say I know a little bit of a lot of things. These include
+				image manipulation, video and audio editing, data manipulation, and coding.<br><br></p>
 			<h2> Education </h2>
-			<p> <span style="font-style:italic;">York University</span>
+			<p> Post-Secondary </p>
+			<p style="font-style:italic;">York University - in progress since 2022
 			<ul>
 				<li> Honours Bachelor of Arts in Information Technology </li>
-				<li>GPA: 8.07/9.0 </li>
+				<li>GPA: 3.8/4.0 </li>
 				<li>Dean's Circle of Student Scholars</li>
 			</ul><br><br></p>
 			<h2> Skills </h2>
@@ -48,15 +53,15 @@
 			<ul>
 				<li> Image editing software: Adobe Photoshop, Paint.NET, Gimp, Adobe InDesign </li>
 				<li> Computer languages: Java, Python, HTML, SQL, MATLAB </li>
+				<li> Data manipulation and visualization </li>
 			</ul><br><br> </p>
 			<h2> Interests </h2>
 			<p>
 			<ul>
-				<li>Video games </li>
+				<li>Video games - I enjoy playing co-op games with my friends or </li>
 				<li>Arts & Crafts </li>
 				<li>Editing images</li>
-				<li>Horror & thriller movies </li>
-				<li>collecting plushies </li>
+				<li>Collecting plushies </li>
 			</ul>
 			</p>
 		</div>
