--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 	</body>
 
-	<footer> aaaaa <br> aaaaaaaa
+	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br> Copyright
 	</footer>
 
 	</html>
