added footer to all pages and finished about page

--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,13 @@
 					<img src="adventuretime.png"> <br><br>
 					<p> My friends, Lamia and Furqan, and I developed a simple game in Java. This game is inspired by the cartoon Adventure Time and features unique art—drawn by ourselves—, sound effects, and a few different
 						maps and enemies. (Shoutout to Lamia for working hard on this project!) <br><br></p>
-					<a href="" download class="button"> Play Game </a>
+					<a href="adventureTime.jar" download class="button"> Download </a>
 				</div>
+				<div class="border"> Unfinished 2D Game <br>
+				<img src="witchdash.png"> <br><br>
+				<p> In my game design introductory class, I started the development of a game using free assets and simple scripts. This game is not nearly finished yet, as it needs polishing and more features such as monster movement and random spawn of collectibles. So far it contains character animation, a calm music, and working gameplay mechanics. <br><br></p>
+				<a href="https://noobicia.itch.io/witch-dash" class="button"> Play Game </a>
+			</div>
 			</div>
 		</div>
 	</body>
