added gallery to home page

--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
 			ul {
 				margin-left: 20px;
 			}
+
+			span {
+				font-weight: bold;
+				color: rgb(117, 15, 75);
+			}
 		</style>
 		<title> About - Licia's Portfolio </title>
 
@@ -29,7 +34,6 @@
 		<div class="content">
 			<br><br>
 			<h1> &#10025; about me &#10025; </h1>
-			<br>
 			<h2> Biography </h2>
 			<p style="text-align:center;font-style:italic;"> I was born in Brazil in 2003 and later moved to Canada with
 				my family at the age of 13. Since I was a little kid, I have always loved to play video games. It
@@ -37,7 +41,8 @@
 				of my time on the computer, I became more interested in computers, and thus decided to pursue
 				information technology. I highly value my education and try my best to achieve high grades across all
 				of my classes. However, I'm also the type to make time for my hobbies as well and not let school
-				responsibilities completely consume my time. <br> I've developed a variety of computer technical skills in
+				responsibilities completely consume my time. <br> I've developed a variety of computer technical skills
+				in
 				both high school and university, so I would say I know a little bit of a lot of things. These include
 				image manipulation, video and audio editing, data manipulation, and coding.<br><br></p>
 			<h2> Education </h2>
@@ -51,21 +56,27 @@
 			<h2> Skills </h2>
 			<p>
 			<ul>
-				<li> Image editing software: Adobe Photoshop, Paint.NET, Gimp, Adobe InDesign </li>
 				<li> Computer languages: Java, Python, HTML, SQL, MATLAB </li>
 				<li> Data manipulation and visualization </li>
+				<li> Image editing software: Adobe Photoshop, Paint.NET, Gimp, Adobe InDesign </li>
 			</ul><br><br> </p>
 			<h2> Interests </h2>
 			<p>
 			<ul>
-				<li>Video games - I enjoy playing co-op games with my friends or </li>
-				<li>Arts & Crafts </li>
-				<li>Editing images</li>
-				<li>Collecting plushies </li>
+				<li><span>GAMES</span> I enjoy playing co-op games with my friends and chill games by myself. I own
+					over 200 games and need to get back to it because these games aren't going to play themselves.</li>
+				<br>
+				<li><span>ARTS & CRAFTS</span> Although I'm new to it and not particularly good, I like painting,
+					crocheting, and making flowers out of pipe cleaners.</li><br>
+				<li><span>EDITING IMAGES</span> A few years ago, I used to have classes involving Photoshop. At home,
+					I would create profile pictures and funny logos for my friends.</li><br>
+				<li><span>COLLECTING PLUSHIES</span> I love plushies very much, but mostly the ones that have very
+					soft "fur". When it comes to gift giving, I feel like I'm the easiest person to gift because of my
+					love for plushies and how you can never have enough. I've owned about a hundred of them! </li>
 			</ul>
-			</p>
-		</div>
 		</div>
 	</body>
+	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved.</footer>
 
 	</html>
