--- a/blog.html
+++ b/blog.html
@@ -16,12 +16,16 @@
 		<a href="blog.html"> blog </a> <span> </span>
 		<a href="contact.html"> contact </a> <span> </span>
 	</nav>
-    <body>
+
+	<body>
 		<div class="content">
 			<br><br>
 			<h1> &#10025; my blog &#10025; </h1>
-			
-			
+
+
 		</div>
 	</body>
-    </html>
+	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved.</footer>
+
+	</html>
