--- a/projects.html
+++ b/projects.html
@@ -15,23 +15,23 @@
 				row-gap: 100px;
 				padding: 0px 80px;
 			}
-			.container > div {
+
+			.container>div {
 				background-color: rgba(255, 255, 255, 0.562);
-				padding-top:10px;
+				padding-top: 10px;
 				border-radius: 8px;
-				
 				font: bold 20px 'Quintessential';
 				letter-spacing: 4px;
 				text-align: center;
 			}
+
 			img {
-				margin-top:10px;
-				border:4px outset rgb(194, 101, 163);
-				width:90%;
+				margin-top: 10px;
+				border: 4px outset rgb(194, 101, 163);
+				width: 90%;
 			}
-			
 		</style>
-		
+
 	</head>
 	<nav>
 		<a href="index.html"> home </a> <span> </span>
@@ -49,24 +49,36 @@
 			<br>
 			<div class="container">
 				<div class="border"> Step-by-Step Repair Guide <br>
-					<img src="ifixit.png"> <br><br>
-					<p> On iFixit, I created a guide on how to replace a hard disk drive of a specific laptop model. Combining my new technical writing skills and photo-taking techniques learned from my writing class,
-						I provided quality instructions and visuals that are easy and understand for all audiences. <br><br></p>
-						<a href="https://www.ifixit.com/Guide/Lenovo+Z40-70+Hard+Drive+Replacement/169546" class="button"> Visit Site </a>
+					<img src="misc/ifixit.png" alt="Screenshot of the user guide"> <br><br>
+					<p> On iFixit, I created a guide on how to replace a hard disk drive of a specific laptop model.
+						Combining my new technical writing skills and photo-taking techniques learned from my writing
+						class,
+						I provided quality instructions and visuals that are easy and understand for all audiences.
+						<br><br>
+					</p>
+					<a href="https://www.ifixit.com/Guide/Lenovo+Z40-70+Hard+Drive+Replacement/169546" class="button">
+						Visit Site </a>
 				</div>
 				<div class="border">2D Platformer Java Game <br>
-					<img src="adventuretime.png"> <br><br>
-					<p> My friends, Lamia and Furqan, and I developed a simple game in Java. This game is inspired by the cartoon Adventure Time and features unique art—drawn by ourselves—, sound effects, and a few different
+					<img src="misc/adventuretime.png" alt="Screenshot of the main menu of the game"> <br><br>
+					<p> My friends, Lamia and Furqan, and I developed a simple game in Java. This game is inspired by
+						the cartoon Adventure Time and features unique art—drawn by ourselves—, sound effects, and a few
+						different
 						maps and enemies. (Shoutout to Lamia for working hard on this project!) <br><br></p>
 					<a href="adventureTime.jar" download class="button"> Download </a>
 				</div>
 				<div class="border"> Unfinished 2D Game <br>
-				<img src="witchdash.png"> <br><br>
-				<p> In my game design introductory class, I started the development of a game using free assets and simple scripts. This game is not nearly finished yet, as it needs polishing and more features such as monster movement and random spawn of collectibles. So far it contains character animation, a calm music, and working gameplay mechanics. <br><br></p>
-				<a href="https://noobicia.itch.io/witch-dash" class="button"> Play Game </a>
-			</div>
+					<img src="misc/witchdash.png" alt="Screenshot of the game"> <br><br>
+					<p> In my game design introductory class, I started the development of a game using free assets and
+						simple scripts. This game is not nearly finished yet, as it needs polishing and more features
+						such as monster movement and random spawn of collectibles. So far it contains character
+						animation, a calm music, and working gameplay mechanics. <br><br></p>
+					<a href="https://noobicia.itch.io/witch-dash" class="button"> Play Game </a>
+				</div>
 			</div>
 		</div>
 	</body>
+	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved.</footer>
 
 	</html>
