--- a/resume.html
+++ b/resume.html
@@ -23,11 +23,13 @@
 			<h1> &#10025; my resume &#10025; </h1>
 			<br>
 			<p> Here is a comprehensive list of my skills and experience <br><br></p>
-			<img src="general resume.jpg" class ="border" style="width:90%;"/>
+			<img src="general resume.jpg" class="border" style="width:90%;" />
 			<br>
-			
+
 			<a href="general resume.jpg" download="licia_resume" class="button"> Download File </a>
 		</div>
 	</body>
+	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved.</footer>
 
 	</html>
