--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 				margin-top: 10px;
 				margin-right: 20px;
 				float: left;
+				width:300px;
+			}
+
+			.container {
+				display: grid;
+				grid-template-columns: auto auto;
+				row-gap: 50px;
+				column-gap: 50px;
+				margin: 40px 20px 10px 20px;
+			}
+
+			.container img {
+				height: 400px;
+				width: 400px;
 			}
 		</style>
 		<title> Home - Licia's Portfolio </title>
@@ -28,17 +42,37 @@
 		<div class="content">
 			<br><br>
 			<h1> &#10025; welcome to my portfolio &#10025; </h1>
-			<br>
-			<img class="border" id="selfie" src="photo1.jpg" alt="My selfie" width=300px />
-			<p style="font:18pt Times;"> <br> Hello, there! I'm Licia and am pleased to invite you into a bit of my life. <br><br>
+			<h2> introduction </h2>
+			<img class="border" id="selfie" src="misc/photo1.jpg" alt="My selfie"/>
+			<p style="font:18pt Times;"> <br> Hello, there! I'm Licia and am pleased to invite you into a bit of my
+				life. <br><br>
 				Over the years, I have learned various computer technical skills as a student to prepare for my future
 				career. <br><br>
 				Please, explore my page to learn more about my specializations and personal life! <br><br> <br><br>
 				Also, check out my gallery down below! I've included some pictures of my everyday life. </p>
+			<br><br><br>
+			<h2> my gallery </h2>
+			<div class="container">
+				<div>
+					<img src="misc/flowers.jpg" alt="Pipe cleaner flowers" class="border">
+				</div>
+
+				<div>
+					<img src="misc/painting.jpg" alt="Painting of Minecraft skeleton head" class="border">
+				</div>
+
+				<div>
+					<img src="misc/hamster.jpg" alt="Syrian hamster eating kibble" class="border">
+				</div>
+
+				<div>
+					<img src="misc/plushies.jpg" alt="Three plushies lined up side-by-side" class="border">
+				</div>
+			</div>
 		</div>
 	</body>
 
-	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br> Copyright
-	</footer>
+	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved.</footer>
 
 	</html>
