polished code (removed unnecessary lines, fixed indentation), added links to footer

--- a/about.html
+++ b/about.html
@@ -44,28 +44,26 @@
 				responsibilities completely consume my time. <br> I've developed a variety of computer technical skills
 				in
 				both high school and university, so I would say I know a little bit of a lot of things. These include
-				image manipulation, video and audio editing, data manipulation, and coding.<br><br></p>
+				image manipulation, video and audio editing, data manipulation, and coding.<br><br>
+			</p>
 			<h2> Education </h2>
 			<p> Post-Secondary </p>
-			<p style="font-style:italic;">York University - in progress since 2022
+			<p style="font-style:italic;">York University - in progress since 2022 </P>
 			<ul>
 				<li> Honours Bachelor of Arts in Information Technology </li>
 				<li>GPA: 3.8/4.0 </li>
 				<li>Dean's Circle of Student Scholars</li>
-			</ul><br><br></p>
+			</ul><br><br>
 			<h2> Skills </h2>
-			<p>
 			<ul>
 				<li> Computer languages: Java, Python, HTML, SQL, MATLAB </li>
 				<li> Data manipulation and visualization </li>
 				<li> Image editing software: Adobe Photoshop, Paint.NET, Gimp, Adobe InDesign </li>
-			</ul><br><br> </p>
+			</ul><br><br>
 			<h2> Interests </h2>
-			<p>
 			<ul>
 				<li><span>GAMES</span> I enjoy playing co-op games with my friends and chill games by myself. I own
-					over 200 games and need to get back to it because these games aren't going to play themselves.</li>
-				<br>
+					over 200 games and need to get back to it because these games aren't going to play themselves.</li><br>
 				<li><span>ARTS & CRAFTS</span> Although I'm new to it and not particularly good, I like painting,
 					crocheting, and making flowers out of pipe cleaners.</li><br>
 				<li><span>EDITING IMAGES</span> A few years ago, I used to have classes involving Photoshop. At home,
@@ -76,7 +74,11 @@
 			</ul>
 		</div>
 	</body>
-	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved.</footer>
+	<footer>
+		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved. Follow me on:
+		<a href="https://github.com/noobassxd">Github</a> |
+		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
+	</footer>
 
 	</html>
