--- a/blog.html
+++ b/blog.html
@@ -21,11 +21,13 @@
 		<div class="content">
 			<br><br>
 			<h1> &#10025; my blog &#10025; </h1>
-
-
 		</div>
 	</body>
-	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved.</footer>
+	<footer>
+		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved. Follow me on:
+		<a href="https://github.com/noobassxd">Github</a> |
+		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
+	</footer>
 
 	</html>
