--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
 			rel="stylesheet">
 		<style>
-			#selfie {
+			#selfie { /* photo in introduction section */
 				margin-top: 10px;
 				margin-right: 20px;
 				float: left;
 				width:300px;
 			}
 
-			.container {
+			.container { /* grid for aligning gallery photos */
 				display: grid;
 				grid-template-columns: auto auto;
 				row-gap: 50px;
@@ -22,7 +22,7 @@
 				margin: 40px 20px 10px 20px;
 			}
 
-			.container img {
+			.container img { /* format of gallery images */
 				height: 400px;
 				width: 400px;
 			}
@@ -49,30 +49,25 @@
 				Over the years, I have learned various computer technical skills as a student to prepare for my future
 				career. <br><br>
 				Please, explore my page to learn more about my specializations and personal life! <br><br> <br><br>
-				Also, check out my gallery down below! I've included some pictures of my everyday life. </p>
+				Also, check out my gallery down below! I've included some pictures of my everyday life.
+			</p>
 			<br><br><br>
 			<h2> my gallery </h2>
-			<div class="container">
-				<div>
-					<img src="misc/flowers.jpg" alt="Pipe cleaner flowers" class="border">
-				</div>
-
-				<div>
-					<img src="misc/painting.jpg" alt="Painting of Minecraft skeleton head" class="border">
-				</div>
-
-				<div>
-					<img src="misc/hamster.jpg" alt="Syrian hamster eating kibble" class="border">
-				</div>
-
-				<div>
-					<img src="misc/plushies.jpg" alt="Three plushies lined up side-by-side" class="border">
-				</div>
+			<!-- gallery grid -->
+			<div class="container"> 
+				<div> <img src="misc/flowers.jpg" alt="Pipe cleaner flowers" class="border"> </div>
+				<div> <img src="misc/painting.jpg" alt="Painting of Minecraft skeleton head" class="border"> </div>
+				<div> <img src="misc/hamster.jpg" alt="Syrian hamster eating kibble" class="border"> </div>
+				<div> <img src="misc/plushies.jpg" alt="Three plushies lined up side-by-side" class="border"> </div>
 			</div>
 		</div>
 	</body>
 
-	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved.</footer>
+	<footer>
+		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved. Follow me on:
+		<a href="https://github.com/noobassxd">Github</a> |
+		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
+	</footer>
 
 	</html>
