--- a/resume.html
+++ b/resume.html
@@ -22,14 +22,23 @@
 			<br><br>
 			<h1> &#10025; my resume &#10025; </h1>
 			<br>
-			<p> Here is a comprehensive list of my skills and experience <br><br></p>
-			<img src="general resume.jpg" class="border" style="width:90%;" />
-			<br>
-
-			<a href="general resume.jpg" download="licia_resume" class="button"> Download File </a>
+			<p> Here is a comprehensive list of my skills and experience.<br>
+				<span style="font-style: italic;"> Note: File is redacted for now to protect personal information</span>
+				<br><br>
+			</p>
+		<!-- PDF viewer -->
+			<embed src="misc/blurredresume.pdf" width="800px" height="700px"
+				style="border: 4px outset rgb(194, 101, 163);" />
+		<!-- Download button -->
+			<a href="misc/blurredresume.pdf" download="licia_resume" class="button" 
+				style="line-height: 40px;width:22%;"> Download File </a>
 		</div>
 	</body>
-	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved.</footer>
+	<footer>
+		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved. Follow me on:
+		<a href="https://github.com/noobassxd">Github</a> |
+		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
+	</footer>
 
 	</html>
