--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 		<title> Projects - Licia's Portfolio </title>
 		<style>
 			.container {
+				/* grid to hold project layouts */
 				display: grid;
 				grid-template-columns: auto;
 				row-gap: 100px;
@@ -17,6 +18,7 @@
 			}
 
 			.container>div {
+				/* format of project layout */
 				background-color: rgba(255, 255, 255, 0.562);
 				padding-top: 10px;
 				border-radius: 8px;
@@ -48,6 +50,7 @@
 			<h1> &#10025; projects &#10025; </h1>
 			<br>
 			<div class="container">
+				<!-- project 1 -->
 				<div class="border"> Step-by-Step Repair Guide <br>
 					<img src="misc/ifixit.png" alt="Screenshot of the user guide"> <br><br>
 					<p> On iFixit, I created a guide on how to replace a hard disk drive of a specific laptop model.
@@ -59,15 +62,17 @@
 					<a href="https://www.ifixit.com/Guide/Lenovo+Z40-70+Hard+Drive+Replacement/169546" class="button">
 						Visit Site </a>
 				</div>
+				<!-- project 2-->
 				<div class="border">2D Platformer Java Game <br>
 					<img src="misc/adventuretime.png" alt="Screenshot of the main menu of the game"> <br><br>
 					<p> My friends, Lamia and Furqan, and I developed a simple game in Java. This game is inspired by
 						the cartoon Adventure Time and features unique art—drawn by ourselves—, sound effects, and a few
 						different
 						maps and enemies. (Shoutout to Lamia for working hard on this project!) <br><br></p>
-					<a href="adventureTime.jar" download class="button"> Download </a>
+					<a href="misc/adventureTime.jar" download class="button"> Download </a>
 				</div>
-				<div class="border"> Unfinished 2D Game <br>
+				<!-- project 3 -->
+				<div class="border"> Unfinished 2D Game <br> 
 					<img src="misc/witchdash.png" alt="Screenshot of the game"> <br><br>
 					<p> In my game design introductory class, I started the development of a game using free assets and
 						simple scripts. This game is not nearly finished yet, as it needs polishing and more features
@@ -78,7 +83,11 @@
 			</div>
 		</div>
 	</body>
-	<footer> This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved.</footer>
+	<footer>
+		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
+		Licia T. Q. - All Rights Reserved. Follow me on:
+		<a href="https://github.com/noobassxd">Github</a> |
+		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
+	</footer>
 
 	</html>
