--- a/projects.html
+++ b/projects.html
@@ -26,25 +26,19 @@
 				letter-spacing: 4px;
 				text-align: center;
 			}
-
+			.dark-mode .container>div {
+				background-color: rgba(44, 44, 44, 0.521);
+			}
 			img {
 				margin-top: 10px;
 				border: 4px outset rgb(194, 101, 163);
 				width: 90%;
 			}
 		</style>
-
 	</head>
-	<nav>
-		<a href="index.html"> home </a> <span> </span>
-		<a href="about.html"> about </a> <span> </span>
-		<a href="resume.html"> resume </a> <span> </span>
-		<a href="projects.html"> projects </a> <span> </span>
-		<a href="blog.html"> blog </a> <span> </span>
-		<a href="contact.html"> contact </a> <span> </span>
-	</nav>
 
 	<body>
+		<div id="header"></div>
 		<div class="content">
 			<br><br>
 			<h1> &#10025; projects &#10025; </h1>
@@ -82,12 +76,8 @@
 				</div>
 			</div>
 		</div>
+		<div id="footer"></div>
+		<script src="script.js"></script>
 	</body>
-	<footer>
-		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved. Follow me on:
-		<a href="https://github.com/noobassxd">Github</a> |
-		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
-	</footer>
 
 	</html>
