--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="en" height=100%>
 
 	<head>
@@ -12,25 +12,20 @@
 			ul {
 				margin-left: 20px;
 			}
-
 			span {
 				font-weight: bold;
 				color: rgb(117, 15, 75);
+			}
+			.dark-mode span {
+				color:rgb(91, 166, 252);
 			}
 		</style>
 		<title> About - Licia's Portfolio </title>
 
 	</head>
-	<nav>
-		<a href="index.html"> home </a> <span> </span>
-		<a href="about.html"> about </a> <span> </span>
-		<a href="resume.html"> resume </a> <span> </span>
-		<a href="projects.html"> projects </a> <span> </span>
-		<a href="blog.html"> blog </a> <span> </span>
-		<a href="contact.html"> contact </a> <span> </span>
-	</nav>
 
 	<body>
+		<div id="header"></div>
 		<div class="content">
 			<br><br>
 			<h1> &#10025; about me &#10025; </h1>
@@ -63,7 +58,8 @@
 			<h2> Interests </h2>
 			<ul>
 				<li><span>GAMES</span> I enjoy playing co-op games with my friends and chill games by myself. I own
-					over 200 games and need to get back to it because these games aren't going to play themselves.</li><br>
+					over 200 games and need to get back to it because these games aren't going to play themselves.</li>
+				<br>
 				<li><span>ARTS & CRAFTS</span> Although I'm new to it and not particularly good, I like painting,
 					crocheting, and making flowers out of pipe cleaners.</li><br>
 				<li><span>EDITING IMAGES</span> A few years ago, I used to have classes involving Photoshop. At home,
@@ -73,12 +69,8 @@
 					love for plushies and how you can never have enough. I've owned about a hundred of them! </li>
 			</ul>
 		</div>
+		<div id="footer"></div>
+		<script src="script.js"></script>
 	</body>
-	<footer>
-		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved. Follow me on:
-		<a href="https://github.com/noobassxd">Github</a> |
-		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
-	</footer>
 
 	</html>
