--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="en" height=100%>
 
 	<head>
@@ -6,28 +6,36 @@
 		<link rel="stylesheet" href="portfoliostyle.css">
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
 			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
+		<style>
+			h3 {
+				font: bold 26px 'Quintessential';
+				text-align: center;
+			}
+			.container {
+				background-color: rgba(255, 255, 255, 0.562);
+				padding: 20px;
+				border-radius: 8px;
+				letter-spacing: 4px;
+				
+				margin: 40px;
+			}
+			.dark-mode .container {
+				background-color: rgba(44, 44, 44, 0.521);
+			}
+		</style>
 		<title> Blog - Licia's Portfolio </title>
 	</head>
-	<nav>
-		<a href="index.html"> home </a> <span> </span>
-		<a href="about.html"> about </a> <span> </span>
-		<a href="resume.html"> resume </a> <span> </span>
-		<a href="projects.html"> projects </a> <span> </span>
-		<a href="blog.html"> blog </a> <span> </span>
-		<a href="contact.html"> contact </a> <span> </span>
-	</nav>
-
+	
 	<body>
+		<div id="header"></div>
 		<div class="content">
 			<br><br>
 			<h1> &#10025; my blog &#10025; </h1>
+			<div id="blog-list"></div>
 		</div>
+	<div id="footer"></div>
+	<script src="script.js"></script>
 	</body>
-	<footer>
-		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved. Follow me on:
-		<a href="https://github.com/noobassxd">Github</a> |
-		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
-	</footer>
 
 	</html>
