--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="en" height=100%>
 
 	<head>
@@ -29,16 +29,9 @@
 		</style>
 		<title> Home - Licia's Portfolio </title>
 	</head>
-	<nav>
-		<a href="index.html"> home </a> <span> </span>
-		<a href="about.html"> about </a> <span> </span>
-		<a href="resume.html"> resume </a> <span> </span>
-		<a href="projects.html"> projects </a> <span> </span>
-		<a href="blog.html"> blog </a> <span> </span>
-		<a href="contact.html"> contact </a> <span> </span>
-	</nav>
 
 	<body>
+		<div id="header"></div>
 		<div class="content">
 			<br><br>
 			<h1> &#10025; welcome to my portfolio &#10025; </h1>
@@ -61,13 +54,17 @@
 				<div> <img src="misc/plushies.jpg" alt="Three plushies lined up side-by-side" class="border"> </div>
 			</div>
 		</div>
+
+		<script>
+			
+			function toggleMode() {
+				document.documentElement.classList.toggle("dark-mode");
+				
+			}
+		</script>
+		<script src="script.js"></script>
+		<div id="footer"></div>
 	</body>
 
-	<footer>
-		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved. Follow me on:
-		<a href="https://github.com/noobassxd">Github</a> |
-		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
-	</footer>
 
 	</html>
