--- a/resume.html
+++ b/resume.html
@@ -8,16 +8,9 @@
 			rel="stylesheet">
 		<title> Resume - Licia's Portfolio </title>
 	</head>
-	<nav>
-		<a href="index.html"> home </a> <span> </span>
-		<a href="about.html"> about </a> <span> </span>
-		<a href="resume.html"> resume </a> <span> </span>
-		<a href="projects.html"> projects </a> <span> </span>
-		<a href="blog.html"> blog </a> <span> </span>
-		<a href="contact.html"> contact </a> <span> </span>
-	</nav>
 
 	<body>
+		<div id="header"></div>
 		<div class="content" style="text-align: center;">
 			<br><br>
 			<h1> &#10025; my resume &#10025; </h1>
@@ -33,12 +26,8 @@
 			<a href="misc/blurredresume.pdf" download="licia_resume" class="button" 
 				style="line-height: 40px;width:22%;"> Download File </a>
 		</div>
+		<div id="footer"></div>
+		<script src="script.js"></script>
 	</body>
-	<footer>
-		This webpage was created for an ITEC3020 assignment. Please do not share.<br><br> Copyright &#169 2025
-		Licia T. Q. - All Rights Reserved. Follow me on:
-		<a href="https://github.com/noobassxd">Github</a> |
-		<a href="https://www.instagram.com/e_strelicia?igsh=a2Y3cm1ibnFlZzJw&utm_source=qr">Instagram</a>
-	</footer>
-
+	
 	</html>
