--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 			}
 			.container {
 				background-color: rgba(255, 255, 255, 0.562);
-				padding: 20px;
+				padding: 10px 20px 30px;
 				border-radius: 8px;
 				letter-spacing: 4px;
 				
